Fix achivements subtitle text alignment

--- a/assets/css/achievements.css
+++ b/assets/css/achievements.css
@@ -54,6 +54,7 @@
         font-size: 0.8em;
         color: #85858d;
         font-family: 'Roboto Mono', monospace;
+        text-align: center;
     }
 }
 
